--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -2770,5 +2770,8 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active) {
     }
 
 #ChemSolPic2DImg {
-    width: 100%;
+    max-width: 480px;
+    max-height: 300px;
+    width:auto;
+    height:auto;
 }
