--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -377,7 +377,7 @@
                         </div>
 
                     <div class="col-lg-4 col-md-4 padding-less" id="rand"style="border:solid; border-color:black">
-                            <div style="background-color: #{{selectedSolvent.EHS_Color_Code}}; position: absolute; top: 0; left: 0; height: 100%; width: 100%; opacity:0.4;"id="ehskleur";></div>
+                            <div style="background-color: #{{selectedSolvent.EHS_Color_Code}};"id="ehskleur";></div>
                             <div class="grid grid-right col-lg-12" id="solventinfo" style="color: lightgray; overflow: auto; font-size: 15px; padding-left: 20px; padding-right: 15px; background-color:transparent;">
                                 <div style="float:left; width:40%; margin-top:5%;">
                                     <a href="#" class="button" id="ButSolvDet"  ng-click="showSolventInfo()"><h4 style="font-size:21px;">Solvent details</h4></a>
