--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -2789,3 +2789,7 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active) {
     background-color: transparent;
     box-shadow: none;
  }
+
+#ehskleur {
+     position: absolute; top: 0; left: 0; height: 100%; width: 100%; opacity:0.4;
+}
