--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -376,7 +376,7 @@
                             </div>
                         </div>
 
-                    <div class="col-lg-4 col-md-4 padding-less" id="rand"style="border:solid; border-color:black">
+                    <div class="col-lg-4 col-md-4 padding-less" id="rand">
                             <div style="background-color: #{{selectedSolvent.EHS_Color_Code}};"id="ehskleur";></div>
                             <div class="grid grid-right col-lg-12" id="solventinfo" style="color: lightgray; overflow: auto; font-size: 15px; padding-left: 20px; padding-right: 15px; background-color:transparent;">
                                 <div style="float:left; width:40%; margin-top:5%;">
