--- a/UI-MVC/Views/Shared/_Layout.cshtml
+++ b/UI-MVC/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/numeric/1.2.6/numeric.min.js"></script>
     <script type="text/javascript" src="~/Scripts/angucomplete-alt.min.js"></script>
     <script type="text/javascript" src="~/Scripts/angular-bootstrap-switch.js"></script>
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="~/Scripts/bullet.js"></script>
     <!--Controllers-->
     <script type="text/javascript" src="~/Scripts/Controllers/LoginController.js"></script>
@@ -153,7 +153,7 @@
         </div>
     </div>
     @Scripts.Render("~/bundles/bootstrap")
-<script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
 <script>
     new WOW().init();
 </script>
