--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -377,13 +377,13 @@
                         </div>
 
                     <div class="col-lg-4 col-md-4 padding-less" id="rand">
-                            <div style="background-color: #{{selectedSolvent.EHS_Color_Code}};"id="ehskleur";></div>
-                            <div class="grid grid-right col-lg-12" id="solventinfo" style="color: lightgray; overflow: auto; font-size: 15px; padding-left: 20px; padding-right: 15px; background-color:transparent;">
+                            <div class="ehskleur" style="background-color: #{{selectedSolvent.EHS_Color_Code}};"id="ehskleur";></div>
+                            <div class="grid grid-right col-lg-12 SolventInfo" id="solventinfo" style="color: lightgray; overflow: auto; font-size: 15px; padding-left: 20px; padding-right: 15px; background-color:transparent;">
                                 <div style="float:left; width:40%; margin-top:5%;">
-                                    <a href="#" class="button" id="ButSolvDet"  ng-click="showSolventInfo()"><h4 style="font-size:21px;">Solvent details</h4></a>
+                                    <a href="#" class="button ButSolvDet" id="ButSolvDet"  ng-click="showSolventInfo()"><h4 style="font-size:21px;">Solvent details</h4></a>
                                 </div>
                                 <div style="float:right; width:40%; display: table; margin-top:5%;">
-                                    <a href="#" class="button" id="ButChemStruct" ng-click="showChem2D()"><h4 style="font-size:21px;">Chemical structure</h4></a>
+                                    <a href="#" class="button ButChemStruct" id="ButChemStruct" ng-click="showChem2D()"><h4 style="font-size:21px;">Chemical structure</h4></a>
                                   
                                 </div>
                                 <div class="clear" style="clear:both;">
@@ -416,8 +416,8 @@
                                     </table>
                                 </div>
                                 <div class="ChemSolPic" id="ChemSolPicDiv" style="display:none; padding: 0; margin: 0;">                                    
-                                    <a href="#" class="button" style="float:right;text-align:center;max-width:60px;" id="But3D" ng-click="showChemPic()"><h4 style="font-size:21px;">3D</h4></a>
-                                    <a href="#" class="button" style="float:right;text-align:center;max-width:60px;" id="But2D" ng-click="showChem2D()"><h4 style="font-size:21px;">2D</h4></a>
+                                    <a href="#" class="button But3D" style="float:right;text-align:center;max-width:60px;" id="But3D" ng-click="showChemPic()"><h4 style="font-size:21px;">3D</h4></a>
+                                    <a href="#" class="button But2D" style="float:right;text-align:center;max-width:60px;" id="But2D" ng-click="showChem2D()"><h4 style="font-size:21px;">2D</h4></a>
                                     <h3 class="text-primary text-center" style="float:left;"ng-if="selectedCluster === undefined">{{selectedSolvent.Name}}</h3>
                                     <div class="classified-solvent-alt" ng-if="selectedSolvent === undefined && selectedCluster === undefined">
                                         <p style="margin-top: 140px; color:rgba(80,80,80,1)">No solvent selected</p>
