--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -257,26 +257,23 @@
                                     <h4>#Solvents: {{solventsInCluster.length}}</h4>
 
                                     <div class="solvent-legend">
-                                        <div>
-                                            <img src="/Content/Images/clusterball.png" style="width: 22px; height: 22px; margin-right: 8px;"/>
-                                            <p style="display: inline">Clustercenter</p>
-                                        </div>
-                                        <div style="margin-top: 6px;">
-                                            <img src="/Content/Images/solventball.png" style="width: 22px; height: 22px; margin-right: 8px;"/>
-                                            <p style="display: inline">Solvent</p>
-                                        </div>
-                                        <div style="margin-top: 6px;">
-                                            <img src="/Content/Images/farrestsolvent.png" style="width: 22px; height: 22px; margin-right: 8px;"/>
-                                            <p style="display: inline">Max. distance solvent</p>
-                                        </div>
-                                        <div style="margin-top: 6px;">
-                                            <img src="/Content/Images/closestsolvent.png" style="width: 22px; height: 22px; margin-right: 8px;"/>
-                                            <p style="display: inline">Min. distance solvent</p>
-                                        </div>
-                                        <div ng-if="ClassifiedInstance !== null && ClassifiedInstance.ClusterNumber === cluster" style="margin-top: 6px;">
-                                            <img src="/Content/Images/classifiedsolventball.png" style="width: 22px; height: 22px; margin-right: 8px;"/>
-                                            <p style="display: inline">Classified solvent</p>
-                                        </div>
+                                        <svg height="25">
+                                            <circle float: left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#1f77b4" />
+                                            <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Cluster Center</text>
+                                        </svg>
+                                        <svg height="25">
+                                            <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#9acd32" />
+                                            <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Safe</text>
+                                        </svg>
+                                        <svg height="25">
+                                            <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#ffd700" />
+                                            <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Caution</text>
+                                        </svg>
+                                        <svg height="25">
+                                            <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#ff6347" />
+                                            <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Danger</text>
+                                        </svg>
+                                        
                                     </div>
                                 </div>
                                 <div angucomplete-alt
