[0.8.1.4] Distance to cluster layout fix

--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -316,7 +316,7 @@
                                                 <h4>Distance to clusters</h4>
                                                 <table class="overlay-table">
                                                     <tr ng-repeat="otherCluster in selectedCluster.DistanceToClusters" ng-if="otherCluster.ToClusterId != cluster">
-                                                        <td>To cluster {{otherCluster.ToClusterId}}:</td>
+                                                        <td>Cluster {{otherCluster.ToClusterId}}:</td>
                                                         <td>{{otherCluster.Distance}}</td>
                                                     </tr>
                                                 </table>
