--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -263,15 +263,15 @@
                                         </svg>
                                         <svg height="25">
                                             <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#9acd32" />
-                                            <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Safe</text>
+                                            <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Recommended</text>
                                         </svg>
                                         <svg height="25">
                                             <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#ffd700" />
-                                            <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Caution</text>
+                                            <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Problematic</text>
                                         </svg>
                                         <svg height="25">
                                             <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#ff6347" />
-                                            <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Danger</text>
+                                            <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Hazardous</text>
                                         </svg>
                                         
                                     </div>
@@ -360,13 +360,13 @@
                                 </div>
                             </div>
                         </div>
-                            <div id="distanceMatrixDiv" class="zui-wrapper" scroller>
+                            <div id="distanceMatrixDiv" class="zui-wrapper distanceMatrix" scroller>
                                 <i class="fa fa-times closecrossdis" id="closecrossdis" aria-hidden="true" ng-click="distanceMatrixClose()" data-dismiss="modal"></i>
                                <table class="zui-table" >
-                                   <thead id="zui-table-header">
+                                   <thead id="zui-table-header" class="zui-table-header">
 
                                    </thead>
-                                   <tbody id="zui-table-body">
+                                   <tbody id="zui-table-body" class="zui-table-body">
 
                                    </tbody>
                                </table>
