--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -258,7 +258,7 @@
                             </div>
                             
                             <h3 class="text-primary">Cluster analysis graph</h3>
-                            <div class="chart-legend">Size of bubble: max. solvent distance</div>
+                            <div class="chart-legend">Size of bubble: standard deviation</div>
                             <div id="chartContainer_{{model.Model.AlgorithmName}}" class="chartContainer">
                             </div>
 
