--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -2739,6 +2739,17 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active) {
             text-align: center;
             vertical-align: middle;
             /*colors*/
+            -webkit-transition: 0.3s; /* For Safari 3.1 to 6.0 */
+            transition: 0.3s;
+            border-right: 1px solid #a12f23 !important;
+        }
+        .zui-table thead th:hover{
+            color: white;
+
+            /*text-shadow: 1px 1px 1px #fff;*/
+            background-color: #a12f23 !important; 
+            cursor: pointer;
+
 
         }
 
@@ -2747,13 +2758,14 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active) {
                 position: relative;
                 text-align: left;
                 display: block; /*seperates the first cell in the header from the header*/
-                background-color: #b73426;
+                background-color: #b73426 !important;
                 left: 0;
                 padding: 10px;
                 height: 48px;
                 width: 140px;
                 z-index: 5000;
-                border-right:10px solid #a12f23;
+                border-right:10px solid #a12f23 !important;
+
                 
             }
 
@@ -2772,11 +2784,24 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active) {
     -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,.2);
     -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.2);
     box-shadow: 0 2px 5px 0 rgba(0,0,0,.2);
-	border:1px solid #a12f23;
-	border-right:10px solid #a12f23;
+	border-bottom:1px solid #a12f23 !important;
+	border-right:10px solid #a12f23 !important;
+
+    -webkit-transition: 0.3s; /* For Safari 3.1 to 6.0 */
+            transition: 0.3s;
 
     }
     /*belangrijk*/
+
+    .zui-table tbody tr td:nth-child(1):hover{
+            color: white;
+
+            /*text-shadow: 1px 1px 1px #fff;*/
+            background-color: #a12f23 !important;
+            cursor: pointer;
+
+
+        }
 
     .zui-table tbody td {
         padding: 10px;
