--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -2728,7 +2728,6 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active) {
         .zui-table thead th {
             text-align: left;
             color: white;
-
             /*text-shadow: 1px 1px 1px #fff;*/
             background-color: #b73426;
             height: 48px;
@@ -2739,8 +2738,8 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active) {
             text-align: center;
             vertical-align: middle;
             /*colors*/
-            -webkit-transition: 0.3s; /* For Safari 3.1 to 6.0 */
-            transition: 0.3s;
+            -webkit-transition: background-color 0.3s; /* For Safari 3.1 to 6.0 */
+            transition: background-color 0.3s;
             border-right: 1px solid #a12f23 !important;
         }
         .zui-table thead th:hover{
@@ -2777,19 +2776,15 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active) {
         width: 140px;
         z-index: 5000;
         color: white;
-	    text-decoration: none;
-         
+        text-decoration: none;
         background-color: #b73426;
-
-    -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,.2);
-    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.2);
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.2);
-	border-bottom:1px solid #a12f23 !important;
-	border-right:10px solid #a12f23 !important;
-
-    -webkit-transition: 0.3s; /* For Safari 3.1 to 6.0 */
-            transition: 0.3s;
-
+        -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,.2);
+        -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.2);
+        box-shadow: 0 2px 5px 0 rgba(0,0,0,.2);
+        border-bottom: 1px solid #a12f23 !important;
+        border-right: 10px solid #a12f23 !important;
+        -webkit-transition: background-color 0.3s; /* For Safari 3.1 to 6.0 */
+        transition: background-color 0.3s;
     }
     /*belangrijk*/
 
