--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -207,7 +207,7 @@
                 <div class="row padding-less">
                     <div class="col-lg-12 col-md-12 grid grid-top text-nowrap" id="progress_{{model.Model.AlgorithmName}}">
                         <div class="progress-box" ng-if="cluster.Solvents.length > 0"  ng-style="getWidth(model.Model.Clusters)" ng-repeat="cluster in model.Model.Clusters">
-                            <div id="cluster-div-{{model.Model.AlgorithmName}}-{{$index}}" class="cluster-div" ng-click="clusterChange($index)">
+                            <div id="cluster-div-{{model.Model.AlgorithmName}}-{{$index}}" class="cluster-div" ng-click="clusterChange($index,model)">
                                 <div class="circle-container"  id="circle-{{model.Model.AlgorithmName}}-{{$index}}">
 
                                 </div>
@@ -278,15 +278,15 @@
                                             <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Cluster Center</text>
                                         </svg>
                                         <svg height="25">
-                                            <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#9acd32" />
+                                            <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#9acd32" style="fill-opacity:0.7" />
                                             <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Recommended</text>
                                         </svg>
                                         <svg height="25">
-                                            <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#ffd700" />
+                                            <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#ffd700" style="fill-opacity:0.7" />
                                             <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Problematic</text>
                                         </svg>
                                         <svg height="25">
-                                            <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#ff6347" />
+                                            <circle float left; cx="10" cy="10" r="10" stroke="black" stroke-width="1" fill="#ff6347" style="fill-opacity:0.7" />
                                             <text x="35" y="15" font-family="sans-serif" font-size="15px" fill="white">Hazardous</text>
                                         </svg>
                                         
