--- a/UI-MVC/Views/Shared/_Layout.cshtml
+++ b/UI-MVC/Views/Shared/_Layout.cshtml
@@ -174,7 +174,7 @@
             <div class="sk-cube sk-cube9"></div>
 
         </div>
-        <h2> Loading</h2>
+        <h2>Working</h2>
     </div>
 
 </div>
