--- a/UI-MVC/Content/modal.css
+++ b/UI-MVC/Content/modal.css
@@ -84,9 +84,9 @@
 .classify-container button {
   width: 100%;
   display: block;
-    margin: 0 auto;
-  margin-bottom: 0px;
-  margin-top: 30px;
+  /*margin: 0 auto;*/
+  /*margin-bottom: 0px;
+  margin-top: 30px;*/
   position: relative;
 }
 
