--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -226,6 +226,7 @@
                                  input-class="form-control form-control-small"
                                  style="margin-top: 12px; display: block;"
                                  match-class="highlight"
+                                 auto-match="true"
                                  clear-selected="true">
                             </div>
                             
@@ -279,6 +280,7 @@
                                      input-class="form-control form-control-small"
                                      style="margin-top: 12px; display: block;"
                                      match-class="highlight"
+                                     auto-match="true"
                                      clear-selected="true">
                                 </div>
                                 <svg id="clusterChart_{{model.Model.AlgorithmName}}"></svg>
@@ -426,7 +428,3 @@
     </div>
     </div>
 
-    <script>
-
-
-    </script>
