--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -193,7 +193,7 @@
 
 
                 <div class="row padding-less">
-                    <div class="col-lg-12 col-md-12 grid grid-top text-nowrap" id="progress_{{model.Model.AlgorithmName}}">
+                    <div class="col-lg-12 col-md-12 grid grid-top text-nowrap progress-wrapper" id="progress_{{model.Model.AlgorithmName}}">
                         <div class="progress-box" ng-if="cluster.Solvents.length > 0"  ng-style="getWidth(model.Model.Clusters)" ng-repeat="cluster in model.Model.Clusters">
                             <div id="cluster-div-{{model.Model.AlgorithmName}}-{{$index}}" class="cluster-div" ng-click="clusterChange($index,model)">
                                 <div class="circle-container"  id="circle-{{model.Model.AlgorithmName}}-{{$index}}">
