--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -42,7 +42,7 @@
                 <div class="analysis-settings" style="margin-top: 5px">
                     <ul style="list-style: none;">
                         <li>
-                            <a href="#"  class="xs-button" title="Classify solvent" data-toggle="modal" data-backdrop="static" data-keyboard="false" data-target="#prevClassified-modal">History</a>
+                            <a href="#"  class="xs-button" title="Classify solvent" data-toggle="modal" data-backdrop="static" data-keyboard="false" data-target="#prevClassified-modal" ng-click="history()">History</a>
                         </li>
                         <li style="margin-top: 5px;">
                             <a href="#" class="xs-button" title="Classify solvent" data-toggle="modal" data-backdrop="static" data-keyboard="false" data-target="#addSolvent-modal" ng-click="clearNewSolvent()">Classify</a>
