--- a/UI-MVC/Content/Views/Analysis/Overview.html
+++ b/UI-MVC/Content/Views/Analysis/Overview.html
@@ -231,7 +231,7 @@
                             </div>
                             
                             <h3 class="text-primary">Cluster analysis graph</h3>
-                            <div class="chart-legend">Size of bubble: standard deviation</div>
+                            <div class="chart-legend">Size of bubble: distance furthest solvent (with standard deviation)</div>
                             <div id="chartContainer_{{model.Model.AlgorithmName}}" class="chartContainer">
                             </div>
 
