--- a/UI-MVC/Content/Views/Home.html
+++ b/UI-MVC/Content/Views/Home.html
@@ -123,14 +123,14 @@
             </div>
             <div class="container">
                 <div class="row" style="margin-top: 20px;">
-                    <div class="col-sm-4 wow fadeInLeft text-center">
+                    <!--<div class="col-sm-4 wow fadeInLeft text-center">
                         <div class="box-icon rotate">
                             <i class="fa fa-tachometer fa-4x"></i>
                         </div>
                         <h3>K Means</h3>
                         <p class="lead">The K Means algorithm is the mother of all clustering algorithms. It starts off with a pre-specified number of clustercenters and iteratively adapts the clusters based on the training data. </p>
 
-                    </div>
+                    </div>-->
                     
                     <div class="col-sm-4 wow fadeInLeft text-center">
                         <div class="box-icon rotate">
@@ -146,13 +146,16 @@
                         <h3>X Means</h3>
                         <p class="lead">The X Means algorithm is a variant on K Means, without a pre-specified number of clusters. It uses the Bayes Information Criterion to guide the choice of the best clustering model during training.</p>
                     </div>
-                    
-
-                    
-
+                    <div class="col-sm-4  wow fadeInRight text-center">
+                        <div class="box-icon rotate">
+                            <i class="fa fa-sitemap fa-4x"></i>
+                        </div>
+                        <h3>Self Organising Map</h3>
+                        <p class="lead">The Self Organising Map is an artificial neural network that clusters datasets by adapting the weights of the clustercenters. The algorithm is based on how real human neurons process visual information. It performs a topological mapping.</p>
+                    </div>
                 </div>
 
-                <div class="row" style="margin-top: 50px;">
+                <!--<div class="row" style="margin-top: 50px;">
                     <div class="col-sm-6 wow fadeInRight text-center">
                         <div class="box-icon rotate">
                             <i class="fa fa-wrench fa-4x"></i>
@@ -161,15 +164,8 @@
                         <p class="lead">The Expectancy Maximization algorithm is based on the statistics of the dataset. It is a good choice for datasets that contain many missing data. It clusters the dataset in random clusters and iteratively changes the clusters, trying to improve the log-likelihood of the resulting clusterset. </p>
 
                     </div>
-                    <div class="col-sm-6  wow fadeInRight text-center">
-                        <div class="box-icon rotate">
-                            <i class="fa fa-sitemap fa-4x"></i>
-                        </div>
-                        <h3>Self Organising Map</h3>
-                        <p class="lead">The Self Organising Map is an artificial neural network that clusters datasets by adapting the weights of the clustercenters. The algorithm is based on how real human neurons process visual information. It performs a topological mapping.</p>
-
-                    </div>
-                </div>
+                    
+                </div>-->
             </div>
 
         </section>
@@ -262,7 +258,7 @@
                 <div class="col-md-3 col-sm-6 footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                     <div class="logo"><img src="/Content/Images/logonegative.png" alt="logo" /></div>
                     <p class="copyright">
-                        &copy; 2016 Sustainable Solvents. <br>All Rights Reserved. <br>Designed by J. Jordan & L. Boeckx <br>Students Karel de Grote Hogeschool Antwerp <br>
+                        &copy; 2016 Sustainable Solvents. <br>All Rights Reserved. <br>Designed by J. Jordan & L. Boeckx<br>Updated by C.Houben, D.Kerkhofs, M.Reenaerts <br>Students Karel de Grote Hogeschool Antwerp <br>
                         Images: <a target="_blank" href="http://unsplash.com/">Shutterstock</a>, <a target="_blank" href="http://pexels.com/">Splitshire</a>
                     </p>
                 </div>
@@ -271,8 +267,6 @@
                     <ul class="links">
                         <li><a href="https://www.kdg.be/">Karel de Grote Hogeschool</a></li>
                         <li><a href="http://qframe.be/">QFrame Kontich</a></li>
-                        <li><a href="https://www.linkedin.com/">Jonah Jordan</a></li>
-                        <li><a href="https://www.linkedin.com/">Lennart Boeckx</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
@@ -288,15 +282,15 @@
                 </div>
                 <div class="col-md-3 col-sm-6 footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s">
                     <h3>About</h3>
-                    <p>This project is the thesis of two final year students at Karel de Grote University College Antwerp. This project was made during an internship at QFrame .NET Quality Solutions.</p>
+                    <p>This project is the thesis of final year students at Karel de Grote University College Antwerp. This project was made during an internship at QFrame .NET Quality Solutions.</p>
 
                 </div>
-                <div class="clearfix visible-sm-block"></div>
+                <!--<div class="clearfix visible-sm-block"></div>-->
             </div>
-            <div class="row made">
+            <!--<div class="row made">
                 <div class="col-md-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                     <p>Made with so much  <i class="fa fa-heart" style="color: #E74C3C"></i>  by Jonah and Lennart.</p>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
